tests/ui/consts/const-eval/parse_ints.stderr
error[E0080]: evaluation panicked: from_ascii_radix: radix must lie in the range `[2, 36]`
  --> $DIR/parse_ints.rs:5:24
   |
LL | const _TOO_LOW: () = { u64::from_str_radix("12345ABCD", 1); };
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of constant value failed here
   |
note: inside `core::num::<impl u64>::from_str_radix`
  --> $SRC_DIR/core/src/num/mod.rs:LL:COL
note: inside `core::num::<impl u64>::from_ascii_radix`
  --> $SRC_DIR/core/src/num/mod.rs:LL:COL
   = note: this error originates in the macro `from_str_int_impl` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation panicked: from_ascii_radix: radix must lie in the range `[2, 36]`
  --> $DIR/parse_ints.rs:6:25
   |
LL | const _TOO_HIGH: () = { u64::from_str_radix("12345ABCD", 37); };
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of constant value failed here
   |
note: inside `core::num::<impl u64>::from_str_radix`
  --> $SRC_DIR/core/src/num/mod.rs:LL:COL
note: inside `core::num::<impl u64>::from_ascii_radix`
  --> $SRC_DIR/core/src/num/mod.rs:LL:COL
   = note: this error originates in the macro `from_str_int_impl` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
